Improved test coverage
Improved test coverage